--- a/config/config.yml
+++ b/config/config.yml
@@ -3,6 +3,7 @@ models:
     engine: nim
     model: meta/llama-3.1-70b-instruct
     parameters:
+      api_key: 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
       base_url: https://integrate.api.nvidia.com/v1
 
 rails:
